--- a/TicketLinkMacro/TicketLinkMacro/App.xaml
+++ b/TicketLinkMacro/TicketLinkMacro/App.xaml
@@ -2,7 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:TicketLinkMacro"
-             StartupUri="MainWindow.xaml">
+             xmlns:views="clr-namespace:TicketLinkMacro.Views"
+             StartupUri="Views/MainWindowView.xaml">
     <Application.Resources>
          
     </Application.Resources>
