--- a/TicketLinkMacro/TicketLinkMacro/Views/MainWindowView.xaml
+++ b/TicketLinkMacro/TicketLinkMacro/Views/MainWindowView.xaml
@@ -36,7 +36,7 @@
             <TextBlock Text="Current Status" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,216,0,0"/>
             <TextBlock Text="Schedule ID : " HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,216,132,0"/>
             <TextBlock Text="{Binding ScheduleID}" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,216,10,0"/>
-            <DataGrid ItemsSource="{Binding RemainSeats}"
+            <DataGrid ItemsSource="{Binding CurrentRemainSeats}"
             HorizontalAlignment="Stretch" Margin="10,237,10,0" VerticalAlignment="Top" Height="131" />
             <!--Result Part-->
             <TextBlock Text="Result" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="16,392,0,0" Height="14" Width="78" FontWeight="Bold"/>
